# lexi-bot

./: .black  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  README.md  config.py  example.env  lexi-bot.drawio  lexi-schema.drawio  main.py  overview.md  pre-commit  pyproject.toml  requirements.txt
bot/dialogs/: __init__.py
bot/handlers/: commands.py
bot/middlewares/: register.py
bot/widgets/: buttons.py
db/: crud_mixin.py  database.py
db/commands/: generate_mock_data.py  migrate.py  migrate_script.py
db/mongo/: database.py  models.py
db/tables/: __init__.py  collection.py  some_table.py  user.py  user_word.py
dialog_manager/: factory.py  manager.py
dialogs/: __init__.py
dialogs/add_word/: dialog.py  event_handler.py  getters.py  interface.py  state.py
dialogs/all_words/: dialog.py  dto.py  event_handler.py  getters.py  interface.py  state.py
dialogs/collections/: dialog.py  event_handler.py  getters.py  interface.py  state.py
dialogs/common/: buttons.py
dialogs/home/: dialog.py  event_handler.py  getters.py  interface.py  state.py
handlers/: __init__.py  commands.py
middlewares/: callback_logger.py  register.py
mock/collection/: service.py
mock/statistic/: service.py
mock/word/: service.py
services/collection/: interface.py  schemas.py  service.py
services/statistic/: interface.py  schema.py  schemas.py  service.py
services/training/: enums.py
services/user/: interface.py  (+2 more)
src/: config.py  database.py  handler.py  keyboards.py  main.py  message.py  middleware.py  models.py  router.py  state.py  user.py  utils.py
(+46 files in other folders)
